# bot-twitch-python

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  Pipfile  README.md  bot.py  comands_list.sh  config.example.ini  deps.txt  executar_bot_windows.bat  finalizar_bot_windows.bat  pyproject.toml
.github/workflows/: ci.yml
files/: blacklist_piadas.txt  commands.json  counters.json  texto_bans.txt  texto_engajamento.txt  texto_moderacao_bans.txt
