[tool.poetry]
name = "bot-twitch-python"
version = "0.1.0"
description = ""
authors = ["Casa do Dev"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
twitchio = "^1.1.0"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
